syntax = "proto3";
package lavanet.lava.spec;

option go_package = "github.com/lavanet/lava/v3/x/spec/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";

import "lavanet/lava/spec/api_collection.proto";
import "cosmos/base/v1beta1/coin.proto";

message Spec {
  string index = 1; 
  string name = 2; 
  reserved 3; 
  bool enabled = 4;
  uint32 reliability_threshold = 5;
  bool data_reliability_enabled = 6;
  uint32 block_distance_for_finalized_data = 7;
  uint32 blocks_in_finalization_proof = 8;
  int64 average_block_time =9;
  int64 allowed_block_lag_for_qos_sync = 10;
  uint64 block_last_updated = 11;
  cosmos.base.v1beta1.Coin min_stake_provider = 12[(gogoproto.nullable) = false];
  reserved 13;
  
  enum ProvidersTypes {
    dynamic = 0;
    static = 1;
  }
  
  ProvidersTypes providers_types = 14;
  repeated string imports = 15;
  repeated ApiCollection api_collections = 16;
  repeated string contributor =17;
  string contributor_percentage=18 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
    ];
  uint64 shares = 19;
  string identity = 20;
}
